--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions@main
+    - uses: static-site-generator-blog/actions@main
     - uses: aguevara1/static-site-generator-blog@main
       with:
         args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
