--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
     steps: 
       - name: Checkout code
         uses: actions/checkout@v4
+        uses: actions/checkout@main
         with:
           sparse-checkout: |
               _site
