--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout code
-        uses: actions/checkout@v4
-        uses: actions/checkout@main
-        with:
+      - uses: actions/checkout@v4
+      - uses: actions/checkout@main
+          with:
           sparse-checkout: |
               _site
 env:
