--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,11 @@ jobs:
         with:
            sparse-checkout: |
               _site
+      
+      - name: Deploy to S3
+        run: |
+          aws s3 sync _site/ s3://${AWS_S3_BUCKET}/ --acl public-read --delete
+
 env:
   AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
