--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,11 @@ on:
       - main 
 
 jobs:
-  build-deploy:
+  deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-      uses: jakejarvis/s3-sync-actions@master
+    - uses: jakejarvis/s3-sync-actions@master
       with:
         args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'
       env:
