--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,11 @@ jobs:
     steps:
     - uses: actions/checkout@master
       with:
-        args: --acl public-read --follow-symlinks --delete --exclude ".git*/*"
+        sparse-checkout: |
+          _site
+        run: |
+          aws s3 sync _site/ s3://${AWS_S3_BUCKET}/ --acl public-read --delete
+
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
