--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
     # Sync contents to S3 bucket
         run: |
-          aws s3 sync _site/ s3://${{ secrets.AWS_S3_BUCKET }} --delete --acl public-read
+          aws s3 sync _site/ s3://alldev.click --delete --acl public-read
 
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
