--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,23 +9,14 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@master
+    - uses: jakejarvis/s3-sync-action@master
       with:
-        sparse-checkout: |
-          _site
-    # Set up AWS CLI
-    - uses: aws-actions/configure-aws-credentials@v4
-      with:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
-
-    # Sync contents to S3 bucket
-        run: |
-          aws s3 sync _site/ s3://alldev.click --delete --acl public-read
+        args: --acl public-read --follow-symlinks --delete
 
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+        AWS_REGION: 'us-east-1'
+        SOURCE_DIR: '_site'
