--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-python@v5
       with:
-        python-version: 'python3 3.14'
-    
+        python-version: '3.13'
+    # or just '3.13 'python3 3.13''
     # Install dependencies and build site
     - run: |
         pip install aurora-ssg
