--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Sync files to S3
       run: |
-        aws s3 sync source_dir s3://${{ secrets.AWS_S3_BUCKET }} --delete
+        aws s3 sync ./_site s3://${{ secrets.AWS_S3_BUCKET }} --delete
    
   #    env:
   #      AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
